# geoparquet-wasm

./: .gitignore  Cargo.toml  README.md  package.json
src/: lib.rs
src/arrow2/: geoparquet.rs  mod.rs  reader.rs  wasm.rs
