[package]
name = "geoparquet-wasm"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

parquet-wasm = { git = "https://github.com/kylebarron/parquet-wasm", rev = "a266036", default-features = false, features = [
    "arrow2",
    "reader",
] }
arrow2 = { version = "0.17" }
geoarrow = { git = "https://github.com/kylebarron/geoarrow-rs", package = "geoarrow2", version = "0.0.1" }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
